--- a/index.html
+++ b/index.html
@@ -454,8 +454,7 @@
       <div class="container page-footer__container">
         <div class="page-footer__info">
           <a href="./index.html" lang="en" class="logo page-footer__logo">
-            <span class="logo__part">Web</span>
-            Studio
+            <span class="logo__part">Web</span>Studio
           </a>
           <ul class="footer-links-list">
             <li class="footer-links-list__item">
